--- a/front/src/Pages/Home/Sections/Sections.scss
+++ b/front/src/Pages/Home/Sections/Sections.scss
@@ -51,12 +51,12 @@
 }
 
 .service-list {
+  max-height: 75%;
   background-color: app.$buttonColor;
   padding: 0.5em;
   height: auto;
   border-radius: 12px;
-  scrollbar-color: #6969dd #e0e0e0;
-  scrollbar-width: thin;
+  overflow-y: auto;
 }
 
 .homeImg {
@@ -67,30 +67,4 @@
 
 .light-section {
   background-color: app.$barColor;
-}
-
-
-// scrollbar  of services
-.serviceList::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: aliceblue;
-	border-radius: 10px;
-}
-
-.serviceList::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #484848;
-}
-
-.serviceList::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-image: -webkit-gradient(linear,
-									   left bottom,
-									   left top,
-									   color-stop(0.44, rgb(59, 100, 182)),
-									   color-stop(0.72, rgb(73,125,189)),
-									   color-stop(0.86, rgb(28,58,148)));
 }
